
dnl Process this file with autoconf to produce a configure script
AC_INIT([SuperPascal],[1.0.0],[bugs@samplx.org],[SuperPascal-1.0.0],[http://samplx.org/pascal/SuperPascal.html])
AC_CONFIG_SRCDIR([compile.p])
LOCAL_PROG_GPC
LOCAL_PROG_LATEX
AC_PROG_INSTALL
AC_PROG_MKDIR_P
AC_ARG_VAR([GPC],[GNU Pascal compiler])
AC_ARG_VAR([PCFLAGS], [Pascal compiler flags])
AC_ARG_VAR([LATEX], [LaTeX document tool])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

